# soul-ai-bot

./: .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  listener.Dockerfile  main.py  pyproject.toml  test_main.http
core/: bot_core.py  chat_session.py  commands.py  constants.py  datastore.py  exceptions.py  lifespan.py  listener.py  main.py  models.py  open_ai.py  redis_tools.py  sessions.py  settings.py  test_db_structure.json
core/core/: bot_core.py  commands.py  constants.py  datastore.py  listener.py  models.py  open_ai.py  redis_tools.py  sessions.py  settings.py
docker/listener/: Dockerfile
docker/tg-ai-bot/: Dockerfile
